--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
     </main>
     <footer class="rodape">
-       <p>Desenvolvido por Luciane de Castro como parte da formação ONE - Oracle Next Education + Alura Latam</p>        
+       <p>2025 - Desenvolvido por Luciane de Castro</p>        
     </footer>
 </body>
 </html>
