ajuste link acervo carmen lydia

--- a/technology.html
+++ b/technology.html
@@ -54,9 +54,9 @@
                 <section class="projetos">
                     <h2>Protótipos construídos e em fase de incremento</h2>
                     <ul>
-                        <li><a href="https://www.atletahub.com.br/" style="color:whitesmoke;">AtletaHub</a></li>
+                        <li><a href="https://www.atletahub.com.br/" style="color:whitesmoke;">AtletaHub - Aplicativo facilitador de contato</a></li>
                         <li><a href="https://www.legacykick.com.br/" style="color:whitesmoke;">LegacyKick - Jogo Educativo</a></li>
-                        <li><span style="color:whitesmoke;">Acervo "Carmen Lydia" da Mulher Brasileira no Esporte - Em desenvolvimento pelo MDE LAB</span></li>
+                        <li><a href="https://www.acervodaatletabrasileira.com.br/" style="color:whitesmoke;">Acervo "Carmen Lydia" da Mulher Brasileira no Esporte - Plataforma para pesquisa</a></li>
                     </ul>
                 </section>
 
