--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,12 @@
                     <p>Pesquisa - Curadoria</p>
                     <img src="assets/futeboleiras.jpg" alt="Exposição Futeboleiras do Brasil">
                 </div>
+                <div class="exposicao">
+                    <h3>"Cidade em Movimento"</h3>
+                    <p><strong>Sesc Jundiaí - 2025</strong></p>
+                    <p>Pesquisa - Curadoria</p>
+                    <img src="assets/cidadeemmovimento.jpg" alt="Exposição Cidade em Movimento">
+                </div>
 
             <section class="festivais">
                 <h2>Festivais</h2>
@@ -81,6 +87,12 @@
                     <p><strong>Praia Vermelha do Norte/Ubatuba - 2019</strong></p>
                     <p>Curadoria</p>
                     <img src="assets/ficsu.jpg" alt="Festival FICSU">
+                </div>
+                <div class="festival">
+                    <h3>"1º Festival Internacional de Cinema Mulheres no Futebol - Museu do Futebol/Cinefoot"</h3>
+                    <p><strong>Museu do Futebol - 2025</strong></p>
+                    <p>Produção/Mediação/Mestre de Cerimônia</p>
+                    <img src="assets/mulheresnofutebol.jpg" alt="Festival de Cinema Mulheres no Futebol">
                 </div>
 
 
