--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <h2 class="apresentacao__conteudo_subtitulo">Pesquisadora - Curadora - Escritora</h2>
             <p class="apresentacao__conteudo_paragrafo">Luciane de Castro: Jornalista, pesquisadora e curadora especializada na narrativa potente do futebol feminino. Explore um portfólio dedicado a celebrar as mulheres no esporte.</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/luciane-de-castro/" target="_blank">
-                    <img src="assets/linkedin.png" alt="Ícone do Linkedin">
+                <h2 class="apresentacao__links__subtitulo">Acesse meu Github</h2>
+                
                 </a>
                 <a class="apresentacao__links__link" href="https://github.com/lucianedecastro" target="_blank">
                     <img src="assets/github.png" alt="Ícone do Github">
