--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
     <title>Sobre Mim</title>
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
     <link rel="stylesheet" href="./styles/style.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LEYHMF0T8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7LEYHMF0T8');
+    </script>
 </head>
 <body>
     <header class="cabecalho">
