--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://www.portfoliolucastro.com.br" />
     <meta property="og:type" content="website" />
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LEYHMF0T8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7LEYHMF0T8');
+    </script>
 </head>
 <body>
     <header class="cabecalho">
